--- a/package/network/services/samba36/files/samba.config
+++ b/package/network/services/samba36/files/samba.config
@@ -1,6 +1,6 @@
 config samba
-	option 'name'			'OpenWrt'
+	option 'name'			'Router'
 	option 'workgroup'		'WORKGROUP'
-	option 'description'		'OpenWrt'
+	option 'description'		'Router'
 	option 'homes'			'1'
 
