--- a/package/network/config/firewall/files/firewall.config
+++ b/package/network/config/firewall/files/firewall.config
@@ -137,44 +137,44 @@ config include
 config rule
 	option name		Allow-NFS-RPC
 	option src 		lan
-	option proto 	tcp udp
+	option proto 	'tcp udp'
 	option dest_port 	111
 	option target 	ACCEPT
 
 config rule
 	option name 	Allow-NFS
 	option src 		lan
-	option proto 'tcp udp'
-	option dest_port '2049'
-	option target 'ACCEPT'
+	option proto 	'tcp udp'
+	option dest_port 	2049
+	option target 	ACCEPT
 
 config rule
-	option name 'Allow-NFS-Lock'
-	option src 'lan'
-	option proto 'tcp udp'
-	option dest_port '32777:32780'
-	option target 'ACCEPT'
+	option name 	Allow-NFS-Lock
+	option src 		lan
+	option proto 	'tcp udp'
+	option dest_port 	32777:32780
+	option target 	ACCEPT
 
-config rule 'samba_nsds'
-	option name 'Allow-Samba/NS/DS'
-	option src 'lan'
-	option dest_port '137-138'
-	option proto 'udp'
-	option target 'ACCEPT'
+config rule 		
+	option name 	Allow-Samba/NS/DS
+	option src 		lan
+	option dest_port 	137-138
+	option proto 	udp
+	option target 	ACCEPT
 
-config rule 'samba_ss'
-	option name 'Allow-Samba/SS'
-	option src 'lan'
-	option dest_port '139'
-	option proto 'tcp'
-	option target 'ACCEPT'
+config rule 
+	option name 	Allow-Samba/SS
+	option src 		lan
+	option dest_port 	139
+	option proto 	tcp
+	option target 	ACCEPT
 
-config rule 'samba_smb'
-	option name 'Allow-Samba/SMB'
-	option src 'lan'
-	option dest_port '445'
-	option proto 'tcp'
-	option target 'ACCEPT'
+config rule
+	option name 	Allow-Samba/SMB
+	option src 		lan
+	option dest_port 	445
+	option proto 	tcp
+	option target 	ACCEPT
 
 
 
