--- a/toolchain/Config.in
+++ b/toolchain/Config.in
@@ -250,9 +250,9 @@ choice
 
 	config LIBC_USE_UCLIBC
 		select USE_UCLIBC
-		bool "Use uClibc"
-		depends on !(aarch64 || aarch64_be || powerpc64)
-		depends on BROKEN || !(arm || armeb || i386 || x86_64 || mips || mipsel || mips64 || mips64el || powerpc)
+		bool "Use uClibc-ng"
+		depends on !(aarch64 || aarch64_be || powerpc64 || mips || mips64 || mipsel || mips64el)
+		depends on BROKEN || !(arm || armeb || i386 || x86_64 || powerpc)
 
 	config LIBC_USE_MUSL
 		select USE_MUSL
