--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,13 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
+          sudo apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext \
+          git libncurses5-dev libz-dev patch python3.5 unzip zlib1g-dev lib32gcc1 \
+          libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip \
+          p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils \
+          upx libelf-dev autoconf automake libtool autopoint device-tree-compiler \
+          g++-multilib antlr3 gperf ccache mercurial
+          ./srcipts/feeds update -a
+          ./scripts/feeds install -a
+          make download
           echo test, and deploy your project.
