--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -12,6 +12,10 @@ on:
     - cron: 0 20 * * *
   release:
     types: [published]
+  push:
+    branches: [ openwrt-19.07.4 ]
+  pull_request:
+    branches: [ openwrt-19.07.4 ]
   workflow_dispatch:
 
 jobs:
